# app/model/system/request/authority.go
@@ -2,6 +2,7 @@ package request
 
 import (
 	"github.com/flipped-aurora/gf-vue-admin/app/model/system"
+	"github.com/flipped-aurora/gf-vue-admin/library/global"
 )
 
 type AuthorityCreate struct {
@@ -17,6 +18,32 @@ func (r *AuthorityCreate) Create() system.Authority {
 		AuthorityId:   r.AuthorityId,
 		AuthorityName: r.AuthorityName,
 		DefaultRouter: r.DefaultRouter,
+	}
+}
+
+func (r *AuthorityCreate) DefaultMenu() *AuthoritySetMenu {
+	menus := []system.Menu{{
+		Model:     global.Model{ID: 1},
+		ParentId:  "0",
+		Path:      "dashboard",
+		Name:      "dashboard",
+		Sort:      1,
+		Meta:      system.Meta{Title: "仪表盘", Icon: "setting"},
+		Component: "view/dashboard/index.vue",
+	}}
+	return &AuthoritySetMenu{system.Authority{Menus: menus, AuthorityId: r.AuthorityId}}
+}
+
+func (r *AuthorityCreate) DefaultCasbin() []system.Casbin {
+	return []system.Casbin{
+		{PType: "p", Method: "POST", Path: "/base/login"},
+		{PType: "p", Method: "POST", Path: "/menu/getMenu"},
+		{PType: "p", Method: "POST", Path: "/user/register"},
+		{PType: "p", Method: "PUT", Path: "/user/setUserInfo"},
+		{PType: "p", Method: "GET", Path: "/user/getUserInfo"},
+		{PType: "p", Method: "POST", Path: "/jwt/jsonInBlacklist"},
+		{PType: "p", Method: "POST", Path: "/user/changePassword"},
+		{PType: "p", Method: "POST", Path: "/user/setUserAuthority"},
 	}
 }
 
